--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -4,15 +4,18 @@
 <body class="container">
 
 <header th:replace="fragments :: header"></header>
-    <p th:unless="${events} and ${events.size()}">No events!</p>
-    <table class="table">
+    <table class="table table-striped">
         <thead>
             <tr>
+                <th>ID</th>
                 <th>Name</th>
+                <th>Description</th>
             </tr>
         </thead>
         <tr th:each="event : ${events}">
-            <td th:text="${event}"></td>
+            <td th:text="${event.id}"></td>
+            <td th:text="${event.name}"></td>
+            <td th:text="${event.description}"></td>
         </tr>
     </table>
 </body>
