--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -3,17 +3,17 @@
 <head th:replace="fragments :: head"></head>
 <body class="container">
 
-<nav th:replace="fragments :: header"></nav>
+<header th:replace="fragments :: header"></header>
 
 <form method="post">
    <div class="form-group">
       <label>Name
-         <input type="text" name="eventName" class="form-control">
+         <input type="text" name="name" class="form-control">
       </label>
    </div>
    <div class="form-group">
       <label>Description
-         <input type="text" name="eventDescription" class="form-control">
+         <input type="text" name="description" class="form-control">
       </label>
    </div>
    <div class ="form-group">
