--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -8,13 +8,14 @@
 </head>
 <body>
 
-<nav th:fragment="header">
+<header th:fragment="header">
     <h1 th:text="${title}">Coding Events</h1>
    <ul class="nav">
       <li class="nav-item"><a class="nav-link" href="/events">All Events</a></li>
        <li class="nav-item"><a class="nav-link" href="/events/create">Create Event</a></li>
+       <li class="nav-item"><a class="nav-link" href="/events/delete">Delete Event</a></li>
    </ul>
-</nav>
+</header>
 
 </body>
 </html>
