added more fields

--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -26,6 +26,24 @@
       </label>
       <p class="error" th:errors="${event.contactEmail}"></p>
    </div>
+   <div class="form-group">
+      <label>Location
+         <input th:field="${event.location}" class="form-control">
+      </label>
+      <p class="error" th:errors="${event.location}"></p>
+   </div>
+   <div class="form-group">
+      <label>Registration Required?
+         <input type="checkbox" th:field="${event.registration}" class="form-control"/>
+      </label>
+      <p class="error" th:errors="${event.registration}"></p>
+   </div>
+   <div class="form-group">
+      <label>Number of Attendees
+         <input type="number" th:field="${event.numberOfAttendees}" class="form-control"/>
+      </label>
+      <p class="error" th:errors="${event.numberOfAttendees}"></p>
+   </div>
    <div class ="form-group">
    <input type="submit" value="Create" class="btn btn-primary">
    </div>
