--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -10,6 +10,9 @@
                 <th>ID</th>
                 <th>Name</th>
                 <th>Description</th>
+                <th>Location</th>
+                <th>Registration Required</th>
+                <th>Number of Attendees</th>
                 <th>Contact Email</th>
             </tr>
         </thead>
@@ -17,6 +20,9 @@
             <td th:text="${event.id}"></td>
             <td th:text="${event.name}"></td>
             <td th:text="${event.description}"></td>
+            <td th:text="${event.location}"></td>
+            <td th:text="${event.registration}"></td>
+            <td th:text="${event.numberOfAttendees}"></td>
             <td th:text="${event.contactEmail}"></td>
             <td>
                 <a th:href="@{/events/edit/{id}(id=${event.id})}">Edit</a>
