--- a/src/main/resources/templates/events/edit.html
+++ b/src/main/resources/templates/events/edit.html
@@ -25,7 +25,7 @@
       </label>
    </div>
    <div class ="form-group">
-      <input type="submit" value="Edit Event" class="btn btn-success">
+      <input type="submit" value="Add Event" class="btn btn-success">
    </div>
 </form>
 
