--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -11,6 +11,7 @@
                 <th>Name</th>
                 <th>Description</th>
                 <th>Location</th>
+                <th>Type</th>
                 <th>Registration Required</th>
                 <th>Number of Attendees</th>
                 <th>Contact Email</th>
@@ -21,6 +22,7 @@
             <td th:text="${event.name}"></td>
             <td th:text="${event.description}"></td>
             <td th:text="${event.location}"></td>
+            <td th:text="${event.type.displayName}"></td>
             <td th:text="${event.registration}"></td>
             <td th:text="${event.numberOfAttendees}"></td>
             <td th:text="${event.contactEmail}"></td>
