--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -3,7 +3,7 @@
 <head th:fragment="head">
     <meta charset="UTF-8">
     <title>Coding Events</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="undefined" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="undefined" crossorigin="anonymous"></script>
     <link rel="stylesheet" th:href="@{/styles.css}">
 </head>
@@ -12,9 +12,9 @@
 <header th:fragment="header">
     <h1 th:text="${title}">Coding Events</h1>
    <ul class="nav">
-      <li th:if="${events}" class="nav-item"><a class="nav-link" href="/events">All Events</a></li>
+      <li class="nav-item"><a class="nav-link" href="/events">All Events</a></li>
        <li class="nav-item"><a class="nav-link" href="/events/create">Create Event</a></li>
-       <li th:if="${events}" class="nav-item"><a class="nav-link" href="/events/delete">Delete Event</a></li>
+       <li class="nav-item"><a class="nav-link" href="/events/delete">Delete Event</a></li>
    </ul>
 </header>
 
