added object relational mapping

--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -16,38 +16,33 @@
    </div>
    <div class="form-group">
       <label>Description
-         <input th:field="${event.description}" class="form-control">
+         <input th:field="${event.eventDetails.description}" class="form-control">
       </label>
-      <p class="error" th:errors="${event.description}"></p>
+      <p class="error" th:errors="${event.eventDetails.description}"></p>
    </div>
    <div class="form-group">
       <label>Contact Email
-         <input th:field="${event.contactEmail}" class="form-control">
+         <input th:field="${event.eventDetails.contactEmail}" class="form-control">
       </label>
-      <p class="error" th:errors="${event.contactEmail}"></p>
+      <p class="error" th:errors="${event.eventDetails.contactEmail}"></p>
    </div>
    <div class="form-group">
-      <label>Type
-         <select th:field="${event.type}">
-            <option th:each="type : ${types}" th:value="${type}" th:text="${type.displayName}">
-            </option></select></label></div>
-   <div class="form-group">
-      <label>Location
-         <input th:field="${event.location}" class="form-control">
+      <label>Category
+         <select th:field="${event.eventCategory}">
+            <option th:each="eventCategory : ${categories}" th:value="${eventCategory.id}" th:text="${eventCategory.name}">
+            </option>
+         </select>
       </label>
-      <p class="error" th:errors="${event.location}"></p>
+      <p class="error" th:errors="${event.eventCategory}"></p>
    </div>
    <div class="form-group">
-      <label>Registration Required?
-         <input type="checkbox" th:field="${event.registration}" class="form-control"/>
+      <label>Tags
+         <select th:field="${event.tags}">
+            <option th:each="tag : ${tags}" th:value="${tag.id}" th:text="${tag.name}">
+            </option>
+         </select>
       </label>
-      <p class="error" th:errors="${event.registration}"></p>
-   </div>
-   <div class="form-group">
-      <label>Number of Attendees
-         <input type="number" th:field="${event.numberOfAttendees}" class="form-control"/>
-      </label>
-      <p class="error" th:errors="${event.numberOfAttendees}"></p>
+      <p class="error" th:errors="${event.eventCategory}"></p>
    </div>
    <div class ="form-group">
    <input type="submit" value="Create" class="btn btn-primary">
